<resources>
    <string name="app_name">D&amp;D</string>
    <string name="titre">Donjons &amp; Dragons : Crée ton personnage </string>
    <string name="crea_guided">Création guidée</string>
    <string name="crea_custom">Création customisée</string>
    <string name="fiche">Fiche de personnage</string>
    <string name="pres">
        Bienvenue dans la création guidée de votre personnage. Dans cette page, vous serez guidée dans la création de votre personnage
        que ce soit la race, la classe, l\'historique et votre équipement de départ.
        Si vous jouez une classe pouvant lancer des sorts, il est conseillé de voir avec le maître de jeu pour ce qui est possible d\'utiliser.
        (les sorts ne sont pas abordées dans l\'application)
    </string>
    <string name="nomPerso">Entrez votre nom de personnage :</string>
    <string name="valider">Valider</string>
    <string name="choixRace">Choisissez une race</string>
    <string name="choixCouleur">Choisissez la couleur de votre ascendance draconique</string>
    <string name="sousEspece">Choisissez votre sous-Espèce</string>
    <string name="classe">Choisissez votre classe</string>
    <string name="annuler">Annuler</string>
    <string name="accueil">Retour à l\'accueil</string>
    <string name="validationNom">Votre nom :</string>
    <string name="validationRace">Votre race :</string>
    <string name="validationSousEspece">Votre sous-espèce :</string>
    <string name="validationCouleur">Votre couleur :</string>
    <string name="validationClasse">Votre classe :</string>
    <string name="validationHistorique">Votre historique :</string>
    <string name="pseudo">Choisissez votre pseudo</string>
    <string name="validationPersonnage">Valider Personnage</string>
    <string name="votrePseudo">Sélectionnez un joueur</string>
    <string name="votrePersonnage">Sélectionnez un personnage</string>
    <string name="carac">Amélioration de caractéristique.</string>
    <string name="titreVitesse">Vitesse.</string>
    <string name="vitesse">Votre vitesse de base est de 9 mètres.</string>
    <string name="titreAge">Âge.</string>
    <string name="titreTaille">Taille.</string>
    <string name="titrelangue">Langues.</string>
    <string name="titreCompetenceHistorique">Compétences maîtrisées : </string>
    <string name="titreOutilHistorique">Outils maîtrisés : </string>
    <string name="drkAge">Les jeunes drakéides grandissent rapidement. Ils marchent juste quelques heures après l\'éclosion, atteignent la taille et le développement d\'un enfant humain de dix ans à l\'âge de 3 ans, et sont adultes à 15 ans. Ils vivent environ 80 ans.</string>
    <string name="drkCarac">Votre Force augmente de 2 et votre Charisme de 1.</string>
    <string name="drkTaille">Les drakéides sont plus grands et plus lourds que les humains, mesurant plus de 1,80 mètre pour un poids moyen de près de 125 kg. Votre taille est Moyenne (M).</string>
    <string name="drkTitreTrait1">Ascendance draconique.</string>
    <string name="drkTrait1">Vous avez une ascendance draconique. Choisissez un type de dragon dans la table ci-dessous. Votre souffle et votre résistance aux dégâts sont déterminés par le type de dragon, comme indiqué dans la table.</string>
    <string name="drkTitreTrait2">Souffle.</string>
    <string name="drkTrait2">Vous pouvez utiliser votre action pour libérer un souffle d\'énergie destructrice. Votre ascendance draconique détermine la taille, la forme et le type de dégâts de votre souffle.
        \n Lorsque vous utilisez votre souffle, toute créature dans la zone de l\'expiration doit faire un jet de sauvegarde, dont le type est déterminé par votre ascendance draconique.
        \n Le DD de ce jet de sauvegarde est égal à 8 + votre modificateur de Constitution + votre bonus de maîtrise. En cas d\'échec, la créature subit 2d6 dégâts, ou la moitié de ces dégâts en cas de réussite.
        \n Les dégâts augmentent à 3d6 au niveau 6, 4d6 au niveau 11, et 5d6 au niveau 16. Après avoir utilisé votre souffle, vous devez terminer un repos court ou long pour pouvoir \'utiliser à nouveau.</string>
    <string name="drkTitreTrait3">Résistance aux dégâts.</string>
    <string name="drkTrait3">Vous obtenez la résistance au type de dégâts associé à votre ascendance draconique.</string>
    <string name="drkTitreTrait4"></string>
    <string name="drkTrait4"> </string>
    <string name="drkLangue">Vous pouvez parler, lire et écrire le commun et le draconique. Le draconique passe pour être l\'une des plus anciennes langues et est souvent utilisé dans l\'étude de la magie. La langue semble cassante pour la plupart des autres créatures, et comprend de nombreuses consonnes dures et sifflantes.</string>
    <string name="titrePDV">Points de Vie</string>
    <string name="titrePDV1">DV :</string>
    <string name="titrePDV2">PV au niveau 1 :</string>
    <string name="titrePDV3">PV aux niveaux suivants :</string>
    <string name="titreMaitrises">Maîtrises</string>
    <string name="titreEquipement">Équipement </string>
    <string name="historique">Choisissez votre historique</string>
    <string name="demiElfeCarac">Votre Charisme augmente de 2 et deux autres caractéristiques de votre choix augmentent de 1.</string>
    <string name="demiElfeAge">Les demi-elfes vieillissent au même rythme que les humains, et atteignent l\'âge adulte vers leurs 20 ans.
        Ils vivent cependant beaucoup plus longtemps que les humains, dépassant souvent les 180 ans.</string>
    <string name="demiElfeTaille">Les demi-elfes ont plus ou moins la même taille que les humains, de 1,50 à 1,85 m. Votre taille est Moyenne (M).</string>
    <string name="demiElfeTitreTrait1">Vision dans le noir.</string>
    <string name="demiElfeTrait1">Grâce à votre sang elfe, vous avez une vision supérieure dans le noir et les conditions de faible éclairage.
        Vous pouvez voir à 18 mètres dans une lumière faible comme vous verriez avec une lumière vive,
        et dans le noir comme vous verriez avec une lumière faible.
        Dans le noir, vous ne discernez pas les couleurs, uniquement des nuances de gris.</string>
    <string name="demiElfetitreTrait2">Ascendance féerique.</string>
    <string name="demiElfeTrait2">Vous avez un avantage aux jets de sauvegarde contre les effets de charme et la magie ne peut pas vous endormir.</string>
    <string name="demiElfeTitreTrait3">Polyvalence.</string>
    <string name="demiElfeTrait3">Vous gagnez la maîtrise de deux compétences de votre choix.</string>
    <string name="demiELfeTitreTrait4"></string>
    <string name="demiElfeTrait4"> </string>
    <string name="demiElfeLangue">Vous pouvez parler, lire et écrire le commun, l\'elfique, et une langue supplémentaire de votre choix.</string>
    <string name="nomBarbare">Barbare</string>
    <string name="DVBarbare">12</string>
    <string name="DVMoyBarbare">7</string>
    <string name="maitriseBarbare">Force, Constitution</string>
    <string name="competenceBarbare"> choisissez deux compétences parmi Athlétisme, Dressage, Intimidation, Nature, Perception et Survie</string>
    <string name="equipementBarbare1">(a) une hache à deux mains ou (b) n\'importe quelle arme de guerre de corps à corps</string>
    <string name="equipementBarbare2">(a) deux hachettes ou (b) n\'importe quelle arme courante</string>
    <string name="equipementBarbare3">un sac d\'explorateur et quatre javelines</string>
    <string name="equipementBarbare4"></string>
    <string name="equipementBarbare5"></string>
    <string name="armureBarbare">  armures légères, armures intermédiaires, boucliers</string>
    <string name="armeBarbare"> armes courantes, armes de guerre</string>
    <string name="outilsBarbare">Aucun</string>
    <string name="nbCompetenceBarbare">deux</string>
    <string name="descriptionBarbare">Lorsque vous créez un barbare, réfléchissez d\'où il vient et quelle est sa place dans le monde.
        Discutez avec votre MD afin de lui trouver une origine appropriée.
        Venez-vous d\'une contrée éloignée faisant de vous un étranger dans la campagne ?
        Ou bien cette même campagne se déroule t-elle dans une rude région frontalière où les barbares sont communs ?
        \n Qu\'est-ce qui vous a poussé à devenir aventurier ? Avez vous été séduit par la certitude de devenir riche dans les pays régis par les lois ?
        Avez-vous joint vos forces avec les soldats de ces mêmes pays afin de repousser une menace commune ?
        Est-ce que des monstres ou une horde étrangère vous ont contraint à l\'exil ?
        \n Vous étiez peut-être un prisonnier de guerre, conduit enchaîné dans les pays « civilisés » et qui tente de regagner sa liberté à tout prix.
        Ou peut-être avez vous été banni de votre peuple suite à un crime que vous avez commis,
        un tabou que vous avez brisé ou une révolte qui vous a déchu de votre autorité.</string>
    <string name="nomBarde">Barde</string>
    <string name="DVBarde">8</string>
    <string name="DVMoyBarde">5</string>
    <string name="maitriseBarde">Dextérité, Charisme</string>
    <string name="competenceBarde">choisissez trois compétences de votre choix</string>
    <string name="equipementBarde1">(a) une rapière, (b) une épée longue ou  n\'importe quelle arme courante</string>
    <string name="equipementBarde2">(a) un sac de diplomate ou (b) un sac d\'artiste</string>
    <string name="equipementBarde3">(a) un luth ou (b) n\'importe quel autre instrument de musique</string>
    <string name="equipementBarde4">une armure de cuir et une dague</string>
    <string name="equipementBarde5"></string>
    <string name="armureBarde"> armures légères</string>
    <string name="armeBarde"> armes courantes, arbalète de poing, épée longue, épée courte, rapière</string>
    <string name="outilsBarde">trois instruments de musique de votre choix</string>
    <string name="nbCompetenceBarde">trois</string>
    <string name="descriptionBarde">Les bardes se nourrissent d\’histoires, qu\’elles soient véridiques ou pas.
        Le background et les motivations de votre personnage ne sont pas aussi importants que les histoires qu\'il ou elle raconte à leurs propos.
        Peut-être avez-vous eu une enfance sécuritaire et mondaine. Il n\'y a rien là pour composer une bonne histoire alors vous pourriez vous présenter
        comme un orphelin élevé par une vieille femme dans un marais lugubre ou de telle façon que votre enfance mérite sa propre histoire.
        Certains bardes acquièrent leur magie musicale par l\’intermédiaire de moyens extraordinaires, comme par l\’inspiration d\’une fée ou d\’une autre créature surnaturelle.
        \n \n Étiez-vous l\’apprenti d’un maître, d\'un barde expérimenté que vous avez suivi jusqu\'à ce que vous tentiez seul votre chance ?
        Avez-vous fréquenté un collège où vous avez étudié les connaissances bardiques et exercé votre magie musicale ?
        Ou bien étiez-vous un jeune fugueur ou un orphelin qu\’un barde, devenu votre mentor, a pris sous son aile.
        Ou vous pourriez être un enfant chéri de la noblesse qui a reçu une instruction prodigué par un tuteur.
        Peut-être avez-vous été piégé par les griffes d\’une vieille sorcière avec qui vous avez pu négocier votre vie, votre liberté et un don musical, mais à quel prix ?</string>
    <string name="nomGuerrier">Guerrier</string>
    <string name="DVguerrier">10</string>
    <string name="DVMoyGuerrier">6</string>
    <string name="maitriseGuerrier">Force, Constitution</string>
    <string name="competenceGuerrier">Acrobaties, Athlétisme, Dressage, Histoire, Intimidation, Intuition, Perception et Survie</string>
    <string name="equipementGuerrier1">(a) une cotte de mailles ou (b) une armure de cuir, un arc long et 20 flèches</string>
    <string name="equipementGuerrier2">(a) une arme de guerre et un bouclier ou (b) deux armes de guerre</string>
</resources>