<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--    Guideline Vertical -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <!--     Guideline Horizontal -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/start_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/top_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.20" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/topRetour_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.93" />


    <TextView
        android:id="@+id/textViewVotrePseudo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/votrePseudo"
        android:textColor="@color/red_dd"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/start_guideline"
        app:layout_constraintBottom_toBottomOf="@id/top_guideline"
         />

    <Spinner
        android:id="@+id/spinnerPseudo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/start_guideline"
        app:layout_constraintBottom_toBottomOf="@id/top_guideline"
        />

    <TextView
        android:id="@+id/textViewVotrePersonnage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/votrePersonnage"
        android:textAlignment="center"
        android:textColor="@color/red_dd"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/left_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
         />

    <Spinner
        android:id="@+id/spinnerPersonnage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/top_guideline"
        app:layout_constraintBottom_toBottomOf="@id/bottom_guideline"
        />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toTopOf="@id/bottom_guideline"
        app:layout_constraintBottom_toBottomOf="@id/topRetour_guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textViewTitreNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validationNom"
                android:visibility="invisible"
                android:textStyle="bold"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewNom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textViewTitreRace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validationRace"
                android:visibility="invisible"
                android:textStyle="bold"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewRace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textViewTitreTrait1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewTrait1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textViewTitreTrait2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewTrait2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textViewTitreTrait3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewTrait3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textViewTitreTrait4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textStyle="bold"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewTrait4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textViewTitreSousEspece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validationSousEspece"
                android:visibility="invisible"
                android:textStyle="bold"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewSousEspece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textViewTitreClasse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validationClasse"
                android:visibility="invisible"
                android:textStyle="bold"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewClasse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/textViewTitreHistorique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/validationHistorique"
                android:visibility="invisible"
                android:textStyle="bold"
                />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/textViewHistorique"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                />

        </LinearLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp"/>

    </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accueil"
        android:onClick="retour"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toTopOf="@id/topRetour_guideline"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>